--- a/FileNameConverter/FileNameConverter.csproj
+++ b/FileNameConverter/FileNameConverter.csproj
@@ -11,4 +11,8 @@
 		<FrameworkReference Include="Microsoft.WindowsDesktop.App" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <PackageReference Include="TagLibSharp" Version="2.2.0" />
+	</ItemGroup>
+
 </Project>
